--- a/app/src/main/res/layout/user_detail_repo.xml
+++ b/app/src/main/res/layout/user_detail_repo.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/manrope_medium"
+        android:text="@string/repositories"
         android:textColor="@color/black"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +60,7 @@
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
